Fix icon spacing in post meta

--- a/tsuacm/static/css/style.css
+++ b/tsuacm/static/css/style.css
@@ -39,7 +39,7 @@ nav {
   margin-bottom: 10px;
 }
 
-.calIcon{
+.meta-post .icon {
   padding-right: 5px;
 }
 
